--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <section id="splash" class="bkg-darkblue">
-      <img class="mt- img-fluid" src="assets/images/soundfilm.jpg" alt="SoundFilm">
+      <img class="mt- img-fluid rounded mx-auto d-block" src="assets/images/soundfilm.jpg" alt="SoundFilm">
   </section>
 
 
